2011-09-16  Albert Chu  <chu11@llnl.gov>

	* man/dist/dist2.1: Fix typo.
	
2011-07-12  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Change default install to vendorarch instead of
	sitearch.

	* gendersllnl.spec.in: Update for change appropriately.

2011-03-14  Albert Chu  <chu11@llnl.gov>

	* tagged gendersllnl-1-19-1
	
2011-03-10  Albert Chu  <chu11@llnl.gov>

        * Support --with-perl-site-arch and --with-perl-vendor-arch
        configure options to support install in Perl site or vendor arch
        directories.
	
2011-02-23  Albert Chu  <chu11@llnl.gov>

	* META: Update for new release.

	* tagged gendersllnl-1-18-1
	
2011-01-19  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/gendersllnl.h: Support C++ linking.

2010-08-19  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Update for build on RHEL6.

2010-07-23  Albert Chu  <chu11@llnl.gov>

	* META: Update appropriately for invalid versioning during last tag.

	* tagged gendersllnl-1-17-3
	
2010-02-01  Albert Chu  <chu11@llnl.gov>

	* Update copyrights globally.
	
2009-12-23  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Add rdist requirement for dist subpackage.

	* tagged gendersllnl-1-17-2
	
2009-10-09  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Add appropriate build requires.

	* dist/inst.c: Add mode to open call w/ O_CREAT.

	* tagged gendersllnl-1-17-1
	
2009-08-12  Albert Chu  <chu11@llnl.gov>

        * compat/Makefile.am, src/Gendersllnl/Makefile.am: Revert
	portability fixes.

	* src/Libgendersllnl/Makefile.am, gendersllnl.spec.in: Fix
	portability issues.

2009-08-11  Albert Chu  <chu11@llnl.gov>

        * compat/Makefile.am, src/Gendersllnl/Makefile.am: Fix portability
	bug.
	
2009-05-15  Albert Chu  <chu11@llnl.gov>

	* dist/inst.c: Check return code on close.  fsync before calling
	close.
	
2009-02-26  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-16-1

2009-02-26  Py Watson <watson30@llnl.gov>
