@@ -1,7 +1,7 @@
 .\"##########################################################################
 .\"  $Id: genders_get_cluster.3,v 1.13 2010-02-02 00:57:59 chu11 Exp $
 .\"##########################################################################
-.\"  Copyright (C) 2007-2010 Lawrence Livermore National Security, LLC.
+.\"  Copyright (C) 2007-2011 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2001-2007 The Regents of the University of California.
 .\"  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
 .\"  Written by Jim Garlick <garlick@llnl.gov> and Albert Chu <chu11@llnl.gov>.
