@@ -1,3 +1,7 @@
+2011-10-21  Albert Chu  <chu11@llnl.gov>
+
+	* Update copyright years globally.
+	
 2011-09-16  Albert Chu  <chu11@llnl.gov>
 
 	* man/dist/dist2.1: Fix typo.
